doc: update readme + installation